# EDITH

./: .dockerignore  .gitignore  COORDINATE_SYSTEM_DIAGRAM.txt  COORDINATE_SYSTEM_FIX.md  CRITICAL_FIXES_APPLIED.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  EDITH_CONTEXT.md  ERROR_HANDLING_COMPLETE.md  FINAL_OBSTACLE_FIX.md  HF_SPACE_DEPLOYMENT.md  INFERENCE_TESTING.md  MISSION_COMPLETE_BUG_FIX.md  README.md  REWARD_NORMALIZATION_FIX.md  SETUP_INSTRUCTIONS.md  STRATEGIC_OBSTACLE_PLACEMENT.md  TARGET_COORDINATES_FIX.md  __init__.py  battery_simulator.py  blog.md  collision_detector.py  diagnose_agent_behavior.md  docker-compose.yml  docker_build_test.bat  docker_build_test.sh  edith_env.py  environment.py  inference_drone.py  openenv.yaml  pyproject.toml  requirements.txt  reward_calculator.py  scene_manager.py  setup_local.bat  task_configs.py  temp.py  tools.py  vision_system.py
core/: __init__.py  collision_detector.py  pybullet_bridge.py  scene_manager.py  tools.py  vision_system.py
docs/: DOCKER_GUIDE.md  GRPO_SEED_SYNC.md
server/: app.py
tests/: session_isolatiion_test.py  test_core_logic.py  test_environment_basic.py  test_error_handling.py  test_gui.py  test_headless.py  test_imports.py  test_integration.py  test_movement_debug.py  test_return_home.py  test_scan_verification.py  test_seed_sync.py
wrapper/: __init__.py  edith_env.py  episode_tracker.py  reward_calculator.py  reward_calculator_v2.py  task_configs.py
